created the destination components and loded the static files

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,4 +3,6 @@
 @use "../styles/components/model";
 @use "../styles/components/nav";
 @use "../styles/components/toggle";
+@use "../styles/components/destinations";
 @use "./utils/utils.scss";
+@use "../styles/layouts/layout";
