created the deatils page with funtionality

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,4 @@
 @use "../styles/components/destinations";
 @use "./utils/utils.scss";
 @use "../styles/layouts/layout";
+@use "../styles/abstracts/buttons";
