--- a/src/styles/components/_destinations.scss
+++ b/src/styles/components/_destinations.scss
@@ -6,7 +6,7 @@
 		font-size: 2.8rem;
 		color: $black;
 		font-weight: 500;
-		width: 60%;
+		width: 90%;
 		line-height: 4rem;
 		position: relative;
 
@@ -15,7 +15,7 @@
 			content: "";
 			bottom: -0.5rem;
 			left: 0;
-			width: 40%;
+			width: 70%;
 			height: 0.2rem;
 			background: $main1;
 		}
@@ -27,54 +27,53 @@
 		color: $silverlight;
 		font-weight: 400;
 	}
-	// &__block {
-	//     margin-top: 6rem;
-	//     @include responsive(xsmall) {
-	//         margin-top: 3rem;
-	//     }
-	// }
-	// &__card {
-	//     width: 100%;
-	//     height: 35rem;
-	//     border-radius: 1rem;
-	//     overflow: hidden;
-	//     position: relative;
-	//     &__img {
-	//         width: 100%;
-	//         height: 100%;
-	//         img {
-	//             width: 100%;
-	//             height: 100%;
-	//             object-fit: cover;
-	//             image-rendering: pixelated;
-	//         }
-	//     }
-	//     &__layer {
-	//      @include position(absolute, 0, 0, 0, 0, 100%, 100%);
-	//      @include align(flex, null, flex-end, null);
-	//      background: linear-gradient(to bottom, transparent 30%, $black);
-	//      padding :2rem;
-	//      color: $white;
-	//      &__content {
-	//         @include align(flex, null, center, null);
-	//         &__country {
-	//             font-size: 1.5rem;
-	//             margin-left: .4rem;
-	//         }
-	//      }
-	//     }
-	//     &__info {
-	//        @include position(absolute, 0, 0, null, null, 100%, 100%);
-	//        @include align(flex, center, center, null);
-	//        background: linear-gradient(to right, $main1, $main2);
-	//        visibility: hidden;
-	//        transform: scale(0);
-	//        transition: all .5s linear;
-	//     }
-	//     &:hover &__info {
-	//         visibility: visible;
-	//         transform: scale(1);
-	//     }
+	&_block {
+		margin-top: 6rem;
+	}
+	&_card {
+		width: 100%;
+		height: 35rem;
+		border-radius: 1rem;
+		overflow: hidden;
+		position: relative;
+		&_img {
+			width: 100%;
+			height: 100%;
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				image-rendering: pixelated;
+			}
+		}
 
-	// }
+		&_layer {
+			@include position(absolute, 0, 0, 0, 0, 100%, 100%);
+			@include align(flex, null, flex-end, null);
+			background: linear-gradient(to bottom, transparent 30%, $black);
+			padding: 2rem;
+			color: $white;
+			&_content {
+				@include align(flex, null, center, null);
+				&_country {
+					font-size: 1.5rem;
+					margin-left: 0.4rem;
+				}
+			}
+		}
+
+		&_info {
+			@include position(absolute, 25%, null, 0, null, 100%, 50%);
+			@include align(flex, center, center, null);
+			background: linear-gradient(to right, $main1, $main2);
+			visibility: hidden;
+			transform: scale(0);
+			transition: all 0.5s linear;
+		}
+		&:hover &_info {
+			width: 100%;
+			visibility: visible;
+			transform: scale(1);
+		}
+	}
 }
