--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -17,6 +17,21 @@
 	}
 
 	&-video {
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			image-rendering: pixelated;
+			animation: headerImage 0.5s linear;
+			@keyframes headerImage {
+				from {
+					opacity: 0;
+				}
+				to {
+					opacity: 1;
+				}
+			}
+		}
 		@include abstracts.position(absolute, 0, null, 0, null, 100%, 100%);
 		overflow: hidden;
 	}
