--- a/src/styles/layouts/_layout.scss
+++ b/src/styles/layouts/_layout.scss
@@ -1,12 +1,11 @@
 @use "../abstracts" as *;
 .row {
+	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
 }
 @for $i from 1 through 12 {
 	.col-#{$i} {
 		width: 100% / 12 * $i;
-		@if $i == 6 {
-		}
 	}
 }
