--- a/src/styles/utils/utils.scss
+++ b/src/styles/utils/utils.scss
@@ -1,28 +1,11 @@
 @use "../abstracts" as *;
 
 .container {
-	max-width: 75rem;
+	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.btn-default {
-	@include button($main1, $main2, $white, 4.5rem, 1.4rem, 0.4rem, 0, 2rem);
-}
-
-.btn-dark {
-	@include button(
-		$darkBlack,
-		$darkBlack,
-		$white,
-		4.5rem,
-		1.4rem,
-		1rem,
-		0,
-		2rem
-	);
-	letter-spacing: 0.1rem;
-}
 .pr {
 	position: relative;
 }
@@ -62,5 +45,12 @@
 }
 
 .p-15 {
-	padding: 1.5rem;
+	padding: 1.2rem;
+}
+
+.mr-minus-15 {
+	margin-right: -1.5rem;
+}
+.ml-minus-15 {
+	margin-left: -1.5rem;
 }
