--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,10 @@
 @use "../styles/components/nav";
 @use "../styles/components/toggle";
 @use "../styles/components/destinations";
+@use "../styles/components/destinationInfo";
+@use "../styles/components/city";
+@use "../styles/components/services";
+@use "../styles/components/reviews";
 @use "./utils/utils.scss";
 @use "../styles/layouts/layout";
 @use "../styles/abstracts/buttons";
