--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,8 @@
 @use "../styles/components/city";
 @use "../styles/components/services";
 @use "../styles/components/reviews";
+@use "../styles/components/gallery";
+@use "../styles/components/footer";
 @use "./utils/utils.scss";
 @use "../styles/layouts/layout";
 @use "../styles/abstracts/buttons";
