added media queries to make the page responsive

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,3 +1,5 @@
+@use "breakpoints" as *;
+
 @mixin position($position, $top, $bottom, $left, $right, $width, $height) {
 	position: $position;
 	top: $top;
@@ -71,4 +73,37 @@
 	border-radius: 0.6rem;
 	font-size: 1.3rem;
 	text-transform: capitalize;
+}
+@mixin control($height, $paddingy, $paddingx, $color) {
+	display: block;
+	width: 100%;
+	border-radius: 0.4rem;
+	outline: none;
+	font-size: 1.6rem;
+	border: 1px solid $color;
+	height: $height;
+	padding: $paddingy $paddingx;
+}
+
+@mixin responsive($breakpoint) {
+	@if $breakpoint == large {
+		@media (max-width: $lg) {
+			@content;
+		}
+	}
+	@if $breakpoint == medium {
+		@media (max-width: $md) {
+			@content;
+		}
+	}
+	@if $breakpoint == small {
+		@media (max-width: $sm) {
+			@content;
+		}
+	}
+	@if $breakpoint == xsmall {
+		@media (max-width: $xsm) {
+			@content;
+		}
+	}
 }
