--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -10,6 +10,9 @@
 	z-index: 4;
 	transition: all 0.3s linear;
 	@include align(flex, center, center, 100%);
+	@include responsive(xsmall) {
+		width: 100%;
+	}
 
 	&_content {
 		width: 100%;
@@ -24,6 +27,9 @@
 				font-size: 1.6rem;
 				font-weight: 400;
 				position: relative;
+				@include responsive(xsmall) {
+					text-align: center;
+				}
 
 				&:before {
 					@include position(absolute, 0, 0, 0, 0, 100%, 100%);
