--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @use "../styles/components/reviews";
 @use "../styles/components/gallery";
 @use "../styles/components/footer";
+@use "../styles/components/contact";
 @use "./utils/utils.scss";
 @use "../styles/layouts/layout";
 @use "../styles/abstracts/buttons";
