--- a/src/styles/components/_destinations.scss
+++ b/src/styles/components/_destinations.scss
@@ -1,6 +1,9 @@
 @use "../abstracts" as *;
 .destinations {
 	margin: 8rem 0;
+	@include responsive(xsmall) {
+		margin: 4rem 0;
+	}
 
 	&_heading {
 		font-size: 2.8rem;
@@ -9,6 +12,14 @@
 		width: 90%;
 		line-height: 4rem;
 		position: relative;
+		@include responsive(large) {
+			width: 100%;
+		}
+		@include responsive(xsmall) {
+			font-size: 2.1rem;
+			line-height: 3.5rem;
+			text-transform: capitalize;
+		}
 
 		&::after {
 			position: absolute;
@@ -18,6 +29,9 @@
 			width: 70%;
 			height: 0.2rem;
 			background: $main1;
+			@include responsive(large) {
+				width: 50%;
+			}
 		}
 	}
 
@@ -29,6 +43,9 @@
 	}
 	&_block {
 		margin-top: 6rem;
+		@include responsive(xsmall) {
+			margin-top: 3rem;
+		}
 	}
 	&_card {
 		width: 100%;
