--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,10 +3,10 @@
 	width: 100%;
 	margin-top: 8rem;
 	padding: 8rem 0;
-	// @include responsive(xsmall) {
-	//     margin-top: 4rem;
-	//     padding: 4rem 0;
-	// }
+	@include responsive(xsmall) {
+		margin-top: 4rem;
+		padding: 4rem 0;
+	}
 	&__container {
 		width: 100%;
 		&__block {
@@ -17,12 +17,12 @@
 	&__intro {
 		&__img {
 			width: 15rem;
-			// @include responsive(small) {
-			//     width: 13rem;
-			// }
-			// @include responsive(xsmall) {
-			//     width: 10rem;
-			// }
+			@include responsive(small) {
+				width: 13rem;
+			}
+			@include responsive(xsmall) {
+				width: 10rem;
+			}
 			img {
 				width: 100%;
 				height: auto;
@@ -36,10 +36,10 @@
 			width: 80%;
 			font-weight: 400;
 			line-height: 2.5rem;
-			// @include responsive(xsmall) {
-			//     width: 100%;
-			//     font-size: 1.4rem;
-			// }
+			@include responsive(xsmall) {
+				width: 100%;
+				font-size: 1.4rem;
+			}
 		}
 	}
 	&__heading {
@@ -48,16 +48,18 @@
 		font-size: 1.6rem;
 		letter-spacing: 0.2rem;
 		margin-bottom: 2rem;
-		// @include responsive(xsmall) {
-		//     font-size: 1.4rem;
-		// }
+		@include responsive(xsmall) {
+			font-size: 1.4rem;
+		}
 	}
 	&__ul {
 		list-style: none;
+
 		&__li {
 			display: flex;
 			align-items: center;
 			color: $silverlight;
+
 			a {
 				text-decoration: none;
 				color: $silverlight;
@@ -78,9 +80,9 @@
 		p {
 			font-size: 1.5rem;
 			text-transform: capitalize;
-			// @include responsive(xsmall) {
-			//     font-size: 1.4rem;
-			// }
+			@include responsive(xsmall) {
+				font-size: 1.4rem;
+			}
 		}
 	}
 }
