--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -1,9 +1,9 @@
 @use "../abstracts/" as *;
 .gallery {
 	margin: 8rem 0;
-	// @include responsive(xsmall) {
-	//    margin: 4rem 0;
-	// }
+	@include responsive(xsmall) {
+		margin: 4rem 0;
+	}
 	&__image {
 		width: 100%;
 		height: 22rem;
@@ -25,10 +25,10 @@
 		z-index: 8;
 		@include align(flex, center, center, null);
 		flex-direction: column;
-		//   @include responsive(xsmall) {
-		//       padding-left: 1.5rem;
-		//       padding-right: 1.5rem;
-		//   }
+		@include responsive(xsmall) {
+			padding-left: 1.5rem;
+			padding-right: 1.5rem;
+		}
 		h4 {
 			color: $white;
 			font-size: 1.8rem;
@@ -41,10 +41,10 @@
 			border-radius: 0.3rem;
 			overflow: hidden;
 			animation: cardAnimation 0.5s linear;
-			//   @include responsive(xsmall) {
-			//       width: 100%;
-			//       height: auto;
-			//   }
+			@include responsive(xsmall) {
+				width: 100%;
+				height: auto;
+			}
 			@keyframes cardAnimation {
 				from {
 					opacity: 0;
@@ -59,10 +59,10 @@
 				width: 45rem;
 				max-height: 45rem;
 				overflow: hidden;
-				//   @include responsive(xsmall) {
-				//       width: 100%;
-				//       height: 100%;
-				//   }
+				@include responsive(xsmall) {
+					width: 100%;
+					height: 100%;
+				}
 				img {
 					width: 100%;
 					height: 100%;
