--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -4,10 +4,10 @@
 	background: $silverLight-40;
 	padding: 13rem 0;
 	transform: skewY(-5deg);
-	// @include responsive(xsmall) {
-	//     margin: 4rem 0;
-	//     padding: 6rem 0;
-	// }
+	@include responsive(xsmall) {
+		margin: 4rem 0;
+		padding: 6rem 0;
+	}
 	&__contents {
 		transform: skewY(5deg);
 		&__container {
@@ -16,9 +16,9 @@
 	}
 	&__left {
 		margin-right: 10rem;
-		// @include responsive(medium) {
-		//     margin-right: 0;
-		// }
+		@include responsive(medium) {
+			margin-right: 0;
+		}
 		&__heading {
 			font-size: 3.5rem;
 			font-weight: 900;
@@ -27,22 +27,22 @@
 			color: transparent;
 			background-clip: text;
 			text-transform: capitalize;
-			// @include responsive(medium) {
-			//     font-size: 3rem;
-			//     font-weight: 700;
-			// }
-			// @include responsive(xsmall) {
-			//     font-size: 2rem;
-			//     line-height: 3rem;
-			// }
+			@include responsive(medium) {
+				font-size: 3rem;
+				font-weight: 700;
+			}
+			@include responsive(xsmall) {
+				font-size: 2rem;
+				line-height: 3rem;
+			}
 		}
 		&__paragraph {
 			margin-top: 3.6rem;
 			font-size: 1.6rem;
 			line-height: 2.7rem;
-			// @include responsive(xsmall){
-			//     margin-top: 2.5rem;
-			// }
+			@include responsive(xsmall) {
+				margin-top: 2.5rem;
+			}
 		}
 	}
 	&__list {
