--- a/src/styles/utils/utils.scss
+++ b/src/styles/utils/utils.scss
@@ -4,6 +4,25 @@
 	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+
+	@include responsive(large) {
+		max-width: 100%;
+		padding: 0 5rem;
+	}
+	@include responsive(medium) {
+		max-width: 100%;
+		padding: 0 4rem;
+	}
+	@include responsive(small) {
+		max-width: 100%;
+		padding: 0 2rem;
+	}
+	@include responsive(xsmall) {
+		max-width: 100%;
+		padding: 0 1.5rem;
+	}
 }
 
 .pr {
@@ -28,6 +47,16 @@
 		display: inline-block;
 		color: $darkBlack;
 		cursor: pointer;
+	}
+	&__textarea {
+		@include control(10rem, 1.5rem, 1.5rem, $silverLight-45);
+		&::placeholder {
+			font-family: sans-serif;
+			font-size: 1.5rem;
+			// @include responsive(xsmall) {
+			//     font-size: 1.3rem;
+			// }
+		}
 	}
 }
 ::placeholder {
